--- a/RPSLS/RPSLS/RPSLS.csproj
+++ b/RPSLS/RPSLS/RPSLS.csproj
@@ -43,11 +43,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Gesture.cs" />
+    <Compile Include="OneWayGraph.cs" />
+    <Compile Include="Node.cs" />
+    <Compile Include="Paper.cs" />
+    <Compile Include="Rock.cs" />
+    <Compile Include="RPSLS.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scissors.cs" />
+    <Compile Include="Spock.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <Compile Include="Lizard.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
