Outlined game flow. Created player subclasses.

--- a/RPSLS/RPSLS/RPSLS.csproj
+++ b/RPSLS/RPSLS/RPSLS.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Gesture.cs" />
-    <Compile Include="RPSLS.cs" />
+    <Compile Include="Game.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
